feature/lesson-completion-progress: isola topicos em classe separada e busca por variavel os topicos

--- a/bootstrap/src/main/resources/application.yml
+++ b/bootstrap/src/main/resources/application.yml
@@ -36,4 +36,4 @@ spring:
         schema.registry.url: http://localhost:8081
         specific.avro.reader: true
 topics:
-  student-lesson-progress: student.lesson.progress
+  lesson-completed: lesson_completed
