--- a/docker/docker-compose.kafka.yml
+++ b/docker/docker-compose.kafka.yml
@@ -23,7 +23,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_CREATE_TOPICS: "lesson_completed:1:1"
+      KAFKA_CREATE_TOPICS: "lesson_completed:1:1,student_progress_updated:1:1"
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.5.0
